hls-main/force-app/main/default/objects/Application_Access_Request__c/Application_Access_Request__c.object-meta.xml
<CustomObject>
    <label>Application Access Request</label>
    <nameField>
        <displayFormat>Req {0}</displayFormat>
        <label>Application Access Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Access Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>