hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Application_Description__c.field-meta.xml
<CustomField>
    <fullName>Application_Description__c</fullName>
    <description>Application Description</description>
    <label>Application Description</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>