hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <description>What members see as name of application</description>
    <inlineHelpText>What members see as name of application</inlineHelpText>
    <label>Application Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>