hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Application_privacy_policy__c.field-meta.xml
<CustomField>
    <fullName>Application_privacy_policy__c</fullName>
    <description>Does your application have a privacy policy?</description>
    <inlineHelpText>Does your application have a privacy policy?</inlineHelpText>
    <label>Application have privacy policy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>