hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Application_Redirect_URL_s__c.field-meta.xml
<CustomField>
    <fullName>Application_Redirect_URL_s__c</fullName>
    <description>Where OIDC requests are redirected (Comma-delimited).</description>
    <inlineHelpText>Where OIDC requests are redirected (Comma-delimited).</inlineHelpText>
    <label>Application Redirect URL(s)</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>