hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Application_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Release_Date__c</fullName>
    <description>When do you plan to publish your application for public use?</description>
    <inlineHelpText>When do you plan to publish your application for public use?</inlineHelpText>
    <label>Application Release Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>