hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Captures_user_device_data__c.field-meta.xml
<CustomField>
    <fullName>Captures_user_device_data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your Privacy Policy state if the Application captures any of the user&apos;s device data?</description>
    <inlineHelpText>Does your Privacy Policy state if the Application captures any of the user&apos;s device data?</inlineHelpText>
    <label>Captures user device data?</label>
    <type>Checkbox</type>
</CustomField>