hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <label>Company Address</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>