hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>What members see as name of company.</description>
    <inlineHelpText>What members see as name of company.</inlineHelpText>
    <label>Company Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>