hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Company_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Company_Primary_Contact__c</fullName>
    <description>Person oversees attestation of App security, can be contacted for for delisting/violations of terms and services, or change developer contact info.</description>
    <inlineHelpText>Person oversees attestation of App security, can be contacted for for delisting/violations of terms and services, or change developer contact info.</inlineHelpText>
    <label>Company Primary Contact</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>