hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <label>Company URL</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>