hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Developer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Developer_Contact_Email__c</fullName>
    <description>Person can authorize change of App Tokens, return URLs, etc.</description>
    <inlineHelpText>Person can authorize change of App Tokens, return URLs, etc.</inlineHelpText>
    <label>Developer Contact Email</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>