hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Developer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Contact_Name__c</fullName>
    <label>Developer Contact Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>