hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Enter_the_URL_for_your_privacy_policy__c.field-meta.xml
<CustomField>
    <fullName>Enter_the_URL_for_your_privacy_policy__c</fullName>
    <label>Enter the URL for your privacy policy</label>
    <length>150</length>
    <type>Text</type>
</CustomField>