hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Informs_user_of_data_access__c.field-meta.xml
<CustomField>
    <fullName>Informs_user_of_data_access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your Privacy Policy inform the user how their data (i.e. PHI) will be accessed, exchanged, or used by another entity (including in the future)?</description>
    <inlineHelpText>Does your Privacy Policy inform the user how their data (i.e. PHI) will be accessed, exchanged, or used by another entity (including in the future)?</inlineHelpText>
    <label>Informs user of data access?</label>
    <type>Checkbox</type>
</CustomField>