hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Instructions_to_dispose_health_data__c.field-meta.xml
<CustomField>
    <fullName>Instructions_to_dispose_health_data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you publicly host a link with instructions for how a user can request to securely and completely dispose of their identifiable health data?</description>
    <inlineHelpText>Do you publicly host a link with instructions for how a user can request to securely and completely dispose of their identifiable health data?</inlineHelpText>
    <label>Instructions to dispose health data?</label>
    <type>Checkbox</type>
</CustomField>