hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Require_acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Require_acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your application require the user to acknowledge your privacy policy before authorization?</description>
    <inlineHelpText>Does your application require the user to acknowledge your privacy policy before authorization?</inlineHelpText>
    <label>Require acknowledgement?</label>
    <type>Checkbox</type>
</CustomField>