hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Requires_express_consent__c.field-meta.xml
<CustomField>
    <fullName>Requires_express_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your Privacy Policy require express consent from a user/patient before the patient&apos;s health information is accessed, exchanged, or used, including receiving express consent before a patient&apos;s health information is shared or sold (other than disclosures required by law or disclosures necessary in connection with the sale of the application or a similar transaction)?</description>
    <inlineHelpText>Does your Privacy Policy require express consent from a user/patient before the patient&apos;s health information is accessed, exchanged, or used, including receiving express consent before a patient&apos;s health information is shared or sold (other than disclosures required by law or disclosures necessary in connection with the sale of the application or a similar transaction)?</inlineHelpText>
    <label>Requires express consent?</label>
    <type>Checkbox</type>
</CustomField>