hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Select_APIs__c.field-meta.xml
<CustomField>
    <fullName>Select_APIs__c</fullName>
    <label>Select APIs</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider Directory API</fullName>
            </value>
            <value>
                <fullName>Patient Access API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>