hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/SH_Dev_Support_Email_Label__c.field-meta.xml
<CustomField>
    <fullName>SH_Dev_Support_Email_Label__c</fullName>
    <label>SH-Dev-Support-Email_Label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>