hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/SH_Dev_Terms_Of_Use_Link__c.field-meta.xml
<CustomField>
    <fullName>SH_Dev_Terms_Of_Use_Link__c</fullName>
    <description>Need the full Link from Daniel Royer</description>
    <label>SH-Dev-Terms-Of-Use_Link</label>
    <length>150</length>
    <type>Text</type>
</CustomField>