hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/SH_ServiceNow_AssignmentGroup_Label__c.field-meta.xml
<CustomField>
    <fullName>SH_ServiceNow_AssignmentGroup_Label__c</fullName>
    <label>SH-ServiceNow-AssignmentGroup-Label</label>
    <length>150</length>
    <type>Text</type>
</CustomField>