hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Shows_how_to_terminate_access__c.field-meta.xml
<CustomField>
    <fullName>Shows_how_to_terminate_access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your Privacy Policy state how the user can terminate the Application&apos;s access to user&apos;s data?</description>
    <inlineHelpText>Does your Privacy Policy state how the user can terminate the Application&apos;s access to user&apos;s data?</inlineHelpText>
    <label>Shows how to terminate access?</label>
    <type>Checkbox</type>
</CustomField>