hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/Terms_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required before the form can be submitted.</description>
    <inlineHelpText>Required before the form can be submitted.</inlineHelpText>
    <label>Do you agree to our Terms of Service?</label>
    <type>Checkbox</type>
</CustomField>