hls-main/force-app/main/default/objects/Application_Access_Request__c/fields/User_data_will_be_shared__c.field-meta.xml
<CustomField>
    <fullName>User_data_will_be_shared__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does your Privacy Policy state if the user&apos;s data will be shared or sold (at any time)?</description>
    <inlineHelpText>Does your Privacy Policy state if the user&apos;s data will be shared or sold (at any time)?</inlineHelpText>
    <label>User data will be shared?</label>
    <type>Checkbox</type>
</CustomField>