hls-main/force-app/main/default/objects/Application_Access_Request__c/validationRules/Require_Application_Redirect_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Application_Redirect_URL</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Application_Redirect_URL_s__c)</errorConditionFormula>
    <errorDisplayField>Application_Redirect_URL_s__c</errorDisplayField>
    <errorMessage>Application Redirect URL is required</errorMessage>
</ValidationRule>