hls-main/force-app/main/default/objects/Application_Access_Request__c/validationRules/Require_Terms_of_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Terms_of_Service</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Terms_of_Use__c)</errorConditionFormula>
    <errorDisplayField>Terms_of_Use__c</errorDisplayField>
    <errorMessage>You need to agree to our Terms of Service</errorMessage>
</ValidationRule>